Worked on ticket #161 - added ContinuousManipulator implemented by adoppelb - added bug fixes for MichalewiczNonUniformAllPositionsManipulator and MichalewiczNonUniformOnePositionManipulator as suggested by adoppelb, but commented them -> have to check this with adoppelb first
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@293 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
+++ b/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ContinuousCrossover.cs" />
     <Compile Include="CompleteContinuousCrossover.cs" />
     <Compile Include="BoundsChecker.cs" />
+    <Compile Include="ContinuousManipulator.cs" />
     <Compile Include="DiscreteCrossover.cs" />
     <Compile Include="DiscreteMultiCrossover.cs" />
     <Compile Include="HeuristicCrossover.cs" />
