fixed typo "Substraction" -> "Subtraction" oops ^^
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@308 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Functions/HeuristicLab.Functions.csproj
+++ b/sources/HeuristicLab.Functions/HeuristicLab.Functions.csproj
@@ -79,9 +79,9 @@
     <Compile Include="Logarithm.cs" />
     <Compile Include="Exponential.cs" />
     <Compile Include="Sqrt.cs" />
-    <Compile Include="Substraction.cs" />
     <Compile Include="Power.cs" />
     <Compile Include="Division.cs" />
+    <Compile Include="Subtraction.cs" />
     <Compile Include="SymbolTable.cs" />
     <Compile Include="Tangens.cs" />
     <Compile Include="Cosinus.cs" />
