added copyright text for SQLite
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@355 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.SQLite/HeuristicLab.SQLite.csproj
+++ b/sources/HeuristicLab.SQLite/HeuristicLab.SQLite.csproj
@@ -61,6 +61,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="SQLite License.txt" />
     <Content Include="System.Data.SQLite.DLL" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
