added help-file for SQLite
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@360 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.SQLite/HeuristicLab.SQLite.csproj
+++ b/sources/HeuristicLab.SQLite/HeuristicLab.SQLite.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
+    <None Include="SQLite.NET.chm" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
