--- a/sources/HeuristicLab.Functions/HeuristicLab.Functions.csproj
+++ b/sources/HeuristicLab.Functions/HeuristicLab.Functions.csproj
@@ -55,6 +55,7 @@
     <Compile Include="BakedFunctionTree.cs" />
     <Compile Include="BakedTreeEvaluator.cs" />
     <Compile Include="Constant.cs" />
+    <Compile Include="Differential.cs" />
     <Compile Include="GreaterThan.cs" />
     <Compile Include="IfThenElse.cs">
       <SubType>Code</SubType>
