worked on #187 - code is still a mess
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@372 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.Console/HeuristicLab.CEDMA.Console.csproj
+++ b/sources/HeuristicLab.CEDMA.Console/HeuristicLab.CEDMA.Console.csproj
@@ -65,9 +65,11 @@
     <Compile Include="ConsoleEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="DbPersistenceManager.cs" />
     <Compile Include="HeuristicLabCedmaConsolePlugin.cs" />
     <Compile Include="IAgent.cs" />
     <Compile Include="IAgentList.cs" />
+    <Compile Include="IDatabaseItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AgentListView.cs">
       <SubType>UserControl</SubType>
