--- a/sources/HeuristicLab.DistributedEngine/HeuristicLab.DistributedEngine.csproj
+++ b/sources/HeuristicLab.DistributedEngine/HeuristicLab.DistributedEngine.csproj
@@ -48,8 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OnGridProcessor.cs" />
     <Compile Include="HeuristicLabDistributedEnginePlugin.cs" />
-    <Compile Include="JobManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DistributedEngine.cs" />
     <Compile Include="DistributedEngineEditor.cs">
@@ -63,6 +63,10 @@
     <ProjectReference Include="..\HeuristicLab.Core\HeuristicLab.Core.csproj">
       <Project>{F43B59AB-2B8C-4570-BC1E-15592086517C}</Project>
       <Name>HeuristicLab.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HeuristicLab.Data\HeuristicLab.Data.csproj">
+      <Project>{F473D9AF-3F09-4296-9F28-3C65118DAFFA}</Project>
+      <Name>HeuristicLab.Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\HeuristicLab.Grid\HeuristicLab.Grid.csproj">
       <Project>{545CE756-98D8-423B-AC2E-6E7D70926E5C}</Project>
