--- a/sources/HeuristicLab.CEDMA.DB.Interfaces/HeuristicLab.CEDMA.DB.Interfaces.csproj
+++ b/sources/HeuristicLab.CEDMA.DB.Interfaces/HeuristicLab.CEDMA.DB.Interfaces.csproj
@@ -58,7 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AgentEntry.cs" />
-    <Compile Include="AgentStatus.cs" />
+    <Compile Include="ProcessStatus.cs" />
+    <Compile Include="RunEntry.cs" />
     <Compile Include="ResultEntry.cs" />
     <Compile Include="HeuristicLabCedmaDbInterfacesPlugin.cs" />
     <Compile Include="IDatabase.cs" />
