--- a/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
+++ b/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{F8880599-F224-4EC7-9288-5C4A6853E7BE}</ProjectGuid>
+    <ProjectGuid>{C27DDF6C-84DF-45EF-B82F-57A28DD51166}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HeuristicLab.CEDMA.Console</RootNamespace>
-    <AssemblyName>HeuristicLab.CEDMA.Console</AssemblyName>
+    <RootNamespace>HeuristicLab.CEDMA.Core</RootNamespace>
+    <AssemblyName>HeuristicLab.CEDMA.Core</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
@@ -66,7 +66,7 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="DbPersistenceManager.cs" />
-    <Compile Include="HeuristicLabCedmaConsolePlugin.cs" />
+    <Compile Include="HeuristicLabCedmaCorePlugin.cs" />
     <Compile Include="IAgent.cs" />
     <Compile Include="IAgentList.cs" />
     <Compile Include="IDatabaseItem.cs" />
