--- a/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
+++ b/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ConsoleEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="IResult.cs" />
     <Compile Include="DbPersistenceManager.cs" />
     <Compile Include="HeuristicLabCedmaCorePlugin.cs" />
     <Compile Include="IAgent.cs" />
