worked on very basic control to view the tree of agents/runs (ticket #188)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@393 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
+++ b/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ConsoleEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Result.cs" />
     <Compile Include="IResult.cs" />
     <Compile Include="DbPersistenceManager.cs" />
     <Compile Include="HeuristicLabCedmaCorePlugin.cs" />
