* implemented operator to store a whole scope as an result item into the cedma-db.  * worked on AgentListView to display results as sub-nodes of agents.
(ticket #191)

git-svn-id: https://src.heuristiclab.com/svn/core/trunk@394 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.Operators/HeuristicLab.CEDMA.Operators.csproj
+++ b/sources/HeuristicLab.CEDMA.Operators/HeuristicLab.CEDMA.Operators.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ScopeResultWriter.cs" />
     <Compile Include="HeuristicLabCedmaOperatorsPlugin.cs" />
     <Compile Include="OnGridProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
