fixed ticket #205 by creating the function-specific evaluator in the evaluation operators.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@396 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Functions/HeuristicLab.Functions.csproj
+++ b/sources/HeuristicLab.Functions/HeuristicLab.Functions.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Constant.cs" />
     <Compile Include="Differential.cs" />
     <Compile Include="GreaterThan.cs" />
+    <Compile Include="IEvaluator.cs" />
     <Compile Include="IfThenElse.cs">
       <SubType>Code</SubType>
     </Compile>
