worked on #211 (Full operator-graphs are stored multiple times in the database even though most of it is static anyway)
 * created a new type of operator library that is connected to the CEDMA db and a view for it

git-svn-id: https://src.heuristiclab.com/svn/core/trunk@417 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
+++ b/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
@@ -62,6 +62,12 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="DatabaseOperatorLibrary.cs" />
+    <Compile Include="DatabaseOperatorLibraryView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DatabaseOperatorLibraryView.Designer.cs">
+      <DependentUpon>DatabaseOperatorLibraryView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Result.cs" />
     <Compile Include="IResult.cs" />
     <Compile Include="HeuristicLabCedmaCorePlugin.cs" />
@@ -110,6 +116,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ConsoleEditor.resx">
       <DependentUpon>ConsoleEditor.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DatabaseOperatorLibraryView.resx">
+      <DependentUpon>DatabaseOperatorLibraryView.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
