--- a/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
+++ b/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
@@ -68,6 +68,7 @@
     <Compile Include="DatabaseOperatorLibraryView.Designer.cs">
       <DependentUpon>DatabaseOperatorLibraryView.cs</DependentUpon>
     </Compile>
+    <Compile Include="OperatorLink.cs" />
     <Compile Include="Result.cs" />
     <Compile Include="IResult.cs" />
     <Compile Include="HeuristicLabCedmaCorePlugin.cs" />
@@ -99,6 +100,10 @@
     <ProjectReference Include="..\HeuristicLab.Core\HeuristicLab.Core.csproj">
       <Project>{F43B59AB-2B8C-4570-BC1E-15592086517C}</Project>
       <Name>HeuristicLab.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HeuristicLab.Operators\HeuristicLab.Operators.csproj">
+      <Project>{A9983BA2-B3B2-475E-8E2C-62050B71D1C5}</Project>
+      <Name>HeuristicLab.Operators</Name>
     </ProjectReference>
     <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
