implemented #221 (Evaluator for classification accuracy)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@422 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
+++ b/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Evaluation\AccuracyEvaluator.cs" />
     <Compile Include="Evaluation\MeanAbsolutePercentageErrorEvaluator.cs" />
     <Compile Include="Evaluation\TheilInequalityCoefficientEvaluator.cs" />
     <Compile Include="Evaluation\SimpleEvaluator.cs" />
