* split the GridForm class into two classes GridForm and GridClient  * added class EngineRunner to act as the bridge between the AppDomain where engines are executed and the main AppDomain of the client.  * GridClient creates a new AppDomain for each engine and unloads it again when the engine is finished.
(ticket #230)

git-svn-id: https://src.heuristiclab.com/svn/core/trunk@440 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Grid/HeuristicLab.Grid.csproj
+++ b/sources/HeuristicLab.Grid/HeuristicLab.Grid.csproj
@@ -59,7 +59,9 @@
     <Compile Include="ClientForm.designer.cs">
       <DependentUpon>ClientForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="EngineRunner.cs" />
     <Compile Include="EngineStore.cs" />
+    <Compile Include="GridClient.cs" />
     <Compile Include="GridClientApplication.cs" />
     <Compile Include="GridServer.cs" />
     <Compile Include="GridServerApplication.cs" />
