--- a/sources/HeuristicLab.DataAnalysis/HeuristicLab.DataAnalysis.csproj
+++ b/sources/HeuristicLab.DataAnalysis/HeuristicLab.DataAnalysis.csproj
@@ -69,6 +69,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Regression.cs" />
+    <Compile Include="RowShuffler.cs" />
     <Compile Include="Statistics.cs" />
     <Compile Include="SvmExporter.cs">
       <SubType>Form</SubType>
@@ -99,6 +100,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ManualScalingControl.resx">
       <DependentUpon>ManualScalingControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="SvmExporter.resx">
       <DependentUpon>SvmExporter.cs</DependentUpon>
