--- a/sources/HeuristicLab.DataAnalysis/HeuristicLab.DataAnalysis.csproj
+++ b/sources/HeuristicLab.DataAnalysis/HeuristicLab.DataAnalysis.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RowShuffler.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="DataFormatException.cs" />
     <Compile Include="Dataset.cs" />
     <Compile Include="DatasetParser.cs" />
@@ -69,7 +72,6 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Regression.cs" />
-    <Compile Include="RowShuffler.cs" />
     <Compile Include="Statistics.cs" />
     <Compile Include="SvmExporter.cs">
       <SubType>Form</SubType>
@@ -94,6 +96,10 @@
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="RowShuffler.resx">
+      <DependentUpon>RowShuffler.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="DatasetView.resx">
       <DependentUpon>DatasetView.cs</DependentUpon>
       <SubType>Designer</SubType>
