--- a/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
+++ b/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Evaluation\ClassificationMeanSquaredErrorEvaluator.cs" />
+    <Compile Include="Evaluation\ClassificationMatrixEvaluator.cs" />
     <Compile Include="FunctionLibraryInjector.cs" />
     <Compile Include="Evaluation\AccuracyEvaluator.cs" />
     <Compile Include="Evaluation\MeanAbsolutePercentageErrorEvaluator.cs" />
