implemented #236 (Operator to create a list of n-m out of k possible items)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@486 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Operators.Metaprogramming/HeuristicLab.Operators.Metaprogramming.csproj
+++ b/sources/HeuristicLab.Operators.Metaprogramming/HeuristicLab.Operators.Metaprogramming.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
     <None Include="Properties\AssemblyInfo.frame" />
+    <Compile Include="PermutationInjector.cs" />
     <Compile Include="DoubleRangeVariableInjector.cs" />
     <Compile Include="HeuristicLabOperatorsMetaprogrammingPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
