--- a/sources/HeuristicLab.Operators.Metaprogramming/HeuristicLab.Operators.Metaprogramming.csproj
+++ b/sources/HeuristicLab.Operators.Metaprogramming/HeuristicLab.Operators.Metaprogramming.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
     <None Include="Properties\AssemblyInfo.frame" />
+    <Compile Include="IntRangeVariableInjector.cs" />
     <Compile Include="PermutationInjector.cs" />
     <Compile Include="DoubleRangeVariableInjector.cs" />
     <Compile Include="HeuristicLabOperatorsMetaprogrammingPlugin.cs" />
