--- a/sources/HeuristicLab/app.config
+++ b/sources/HeuristicLab/app.config
@@ -15,4 +15,11 @@
             </setting>
         </HeuristicLab.Properties.Settings>
     </userSettings>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite"/>
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite"
+           description=".Net Framework Data Provider for SQLite"           type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+    </DbProviderFactories>
+  </system.data>
 </configuration>
