Fixed the problem that sometimes an operator link was not patched before a view was created (which resulted in a !NullException) by adding a property for the source database in OperatorLink! and updating this property recursively whenever an operator is loaded from the CEDMA DB.
The method for recursively setting the property is in static class OperatorLinkPatcher because the code is needed in Agent, DatabaseOperatorLibrary and OperatorLink.

(ticket #211)

git-svn-id: https://src.heuristiclab.com/svn/core/trunk@513 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
+++ b/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
@@ -69,6 +69,7 @@
       <DependentUpon>DatabaseOperatorLibraryView.cs</DependentUpon>
     </Compile>
     <Compile Include="OperatorLink.cs" />
+    <Compile Include="OperatorLinkPatcher.cs" />
     <Compile Include="Result.cs" />
     <Compile Include="IResult.cs" />
     <Compile Include="HeuristicLabCedmaCorePlugin.cs" />
