--- a/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
+++ b/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
@@ -61,6 +61,8 @@
     <Compile Include="ConsoleEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="ResultTable.cs" />
+    <Compile Include="ResultExporter.cs" />
     <Compile Include="DatabaseOperatorLibrary.cs" />
     <Compile Include="DatabaseOperatorLibraryView.cs">
       <SubType>UserControl</SubType>
