implemented #259 (Operator for cross-validation). Also added operators for multi-class one-vs-one modeling.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@516 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
+++ b/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
@@ -47,6 +47,9 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CrossValidation.cs" />
+    <Compile Include="MulticlassOneVsOneAnalyzer.cs" />
+    <Compile Include="MulticlassModeller.cs" />
     <Compile Include="Evaluation\ClassificationMeanSquaredErrorEvaluator.cs" />
     <Compile Include="Evaluation\ClassificationMatrixEvaluator.cs" />
     <Compile Include="FunctionLibraryInjector.cs" />
