implemented #259 (BakedFunctionTree should provide an appropriate ToString() method)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@519 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Functions/HeuristicLab.Functions.csproj
+++ b/sources/HeuristicLab.Functions/HeuristicLab.Functions.csproj
@@ -77,6 +77,7 @@
     <Compile Include="IFunctionVisitor.cs" />
     <Compile Include="LessThan.cs" />
     <Compile Include="Not.cs" />
+    <Compile Include="SymbolicExpressionExporter.cs" />
     <Compile Include="Signum.cs" />
     <Compile Include="Logarithm.cs" />
     <Compile Include="Exponential.cs" />
