fixed a problem in the project file (after addition of itemmailer operator)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@522 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.Operators/HeuristicLab.CEDMA.Operators.csproj
+++ b/sources/HeuristicLab.CEDMA.Operators/HeuristicLab.CEDMA.Operators.csproj
@@ -53,7 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ScopeResultMailer.cs" />
+    <Compile Include="ItemMailer.cs" />
     <Compile Include="ScopeResultWriter.cs" />
     <Compile Include="HeuristicLabCedmaOperatorsPlugin.cs" />
     <Compile Include="OnGridProcessor.cs" />
