implemented #264 (Average percentage change evaluator for evaluation of financial forecast models)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@531 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
+++ b/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CrossValidation.cs" />
+    <Compile Include="Evaluation\AveragePercentageChangeEvaluator.cs" />
     <Compile Include="MulticlassOneVsOneAnalyzer.cs" />
     <Compile Include="MulticlassModeller.cs" />
     <Compile Include="Evaluation\ClassificationMeanSquaredErrorEvaluator.cs" />
