implemented #265 (GP evaluator for profit simulation with financial forecast models)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@532 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
+++ b/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="CrossValidation.cs" />
     <Compile Include="Evaluation\AveragePercentageChangeEvaluator.cs" />
+    <Compile Include="Evaluation\ProfitEvaluator.cs" />
     <Compile Include="MulticlassOneVsOneAnalyzer.cs" />
     <Compile Include="MulticlassModeller.cs" />
     <Compile Include="Evaluation\ClassificationMeanSquaredErrorEvaluator.cs" />
