improved operators to write items to the DB and added two operators to extract items from the DB and add them as variables. ticket #261 (Items are stored multiple times in the result entries in the CEDMA DB)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@542 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.Operators/HeuristicLab.CEDMA.Operators.csproj
+++ b/sources/HeuristicLab.CEDMA.Operators/HeuristicLab.CEDMA.Operators.csproj
@@ -53,6 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="VariableExtractor.cs" />
+    <Compile Include="SubScopesExtractor.cs" />
     <Compile Include="OntologyExtractor.cs" />
     <Compile Include="ResultsExtractor.cs" />
     <Compile Include="MakeStatement.cs" />
