published the rdf-store as WCF service. #261 (Items are stored multiple times in the result entries in the CEDMA DB)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@546 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.Server/HeuristicLab.CEDMA.Server.csproj
+++ b/sources/HeuristicLab.CEDMA.Server/HeuristicLab.CEDMA.Server.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>HeuristicLab.CEDMA.Server</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>HeuristicLab.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
