added new operators to add new rdf-statments and to query the stored graph (with statement templates). #261 (Items are stored multiple times in the result entries in the CEDMA DB)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@547 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.Operators/HeuristicLab.CEDMA.Operators.csproj
+++ b/sources/HeuristicLab.CEDMA.Operators/HeuristicLab.CEDMA.Operators.csproj
@@ -53,6 +53,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SelectSubjectsLiteral.cs" />
+    <Compile Include="SelectProperties.cs" />
+    <Compile Include="SelectSubjects.cs" />
+    <Compile Include="MakeLiteralStatement.cs" />
+    <Compile Include="MakeItemStatement.cs" />
     <Compile Include="ResultsExtractor.cs" />
     <Compile Include="InjectedVariableExtractor.cs" />
     <Compile Include="SplitScopeToItemsResultWriter.cs" />
