added a results-tab in the cedma console which contains a data chart that can be used to display histograms and scatter plots for any result value.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@553 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
+++ b/sources/HeuristicLab.CEDMA.Core/HeuristicLab.CEDMA.Core.csproj
@@ -32,7 +32,27 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HeuristicLab.Charting, Version=3.0.0.91, Culture=neutral, PublicKeyToken=ba48961d6f65dcec, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\HeuristicLab.Charting\bin\Debug\HeuristicLab.Charting.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -61,6 +81,8 @@
     <Compile Include="ConsoleEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Histogram.cs" />
+    <Compile Include="ResultList.cs" />
     <Compile Include="ResultTable.cs" />
     <Compile Include="ResultExporter.cs" />
     <Compile Include="DatabaseOperatorLibrary.cs" />
@@ -91,6 +113,12 @@
     <Compile Include="AgentView.Designer.cs">
       <DependentUpon>AgentView.cs</DependentUpon>
     </Compile>
+    <Compile Include="ResultListView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ResultListView.Designer.cs">
+      <DependentUpon>ResultListView.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
@@ -99,6 +127,10 @@
     <ProjectReference Include="..\HeuristicLab.CEDMA.DB.Interfaces\HeuristicLab.CEDMA.DB.Interfaces.csproj">
       <Project>{4F9BB789-D561-436B-B226-2BF44B7D0804}</Project>
       <Name>HeuristicLab.CEDMA.DB.Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HeuristicLab.Charting.Data\HeuristicLab.Charting.Data.csproj">
+      <Project>{E0740131-AA3E-4A3F-BA03-C9FF8327F4EE}</Project>
+      <Name>HeuristicLab.Charting.Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\HeuristicLab.Core\HeuristicLab.Core.csproj">
       <Project>{F43B59AB-2B8C-4570-BC1E-15592086517C}</Project>
@@ -128,6 +160,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DatabaseOperatorLibraryView.resx">
       <DependentUpon>DatabaseOperatorLibraryView.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ResultListView.resx">
+      <DependentUpon>ResultListView.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
